--- a/ActividadesPresentacion/app/modulos/actividades/registro-actividad.component.html
+++ b/ActividadesPresentacion/app/modulos/actividades/registro-actividad.component.html
@@ -4,16 +4,36 @@
         <div class="row">
             <div class="col-xs-2">Docente</div>
             <div class="col-xs-4">
-                <select class="form-control" required [(ngModel)]="modelo.idDocente" ngControl="docente" #docente="ngForm">
+                <select [(ngModel)]="idDocente" (ngModelChange)="onDocenteSemestreChange()"  class="form-control" required ngControl="docente" #docente="ngForm">
                     <option *ngFor="let d of docentes" [value]=d.nbId>{{d.tbPersona.vrNombres}} {{d.tbPersona.vrApellidos}}</option>
                 </select>
                 <div [hidden]="docente.valid || docente.pristine" class="alert alert-danger">
                     El docente es requerido
                 </div>
             </div>
+            <div class="col-xs-2">Semestre</div>
+            <div class="col-xs-4">
+                <select [(ngModel)]="idSemestre" (ngModelChange)="onDocenteSemestreChange()"  class="form-control" required ngControl="semestre" #semestre="ngForm">
+                    <option *ngFor="let s of semestres" [value]=s.nbId>{{s.nbAnio}} - {{s.nbPeriodo}}</option>
+                </select>
+                <div [hidden]="semestre.valid || semestre.pristine" class="alert alert-danger">
+                    El semestre es requerido
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-2">Curso</div>
+            <div class="col-xs-4">
+                <select class="form-control" required [(ngModel)]="modelo.tbDocenteSemestreCurso.nbId" ngControl="semestreCurso" #semestreCurso="ngForm">
+                    <option *ngFor="let sc of semestreCursos" [value]=sc.nbId>{{sc.tbSemestreCurso.tbGrupo.vrCodigo}} - {{sc.tbSemestreCurso.tbCurso.vrNombre}}</option>
+                </select>
+                <div [hidden]="semestreCurso.valid || semestreCurso.pristine" class="alert alert-danger">
+                    El curso es requerido
+                </div>
+            </div>
             <div class="col-xs-2">Tipo Actividad</div>
             <div class="col-xs-4">
-                <select class="form-control" required [(ngModel)]="modelo.idTipoActividad" ngControl="tipoActividad" #tipoActividad="ngForm">
+                <select class="form-control" required [(ngModel)]="modelo.tbTipoActividad.nbId" ngControl="tipoActividad" #tipoActividad="ngForm">
                     <option *ngFor="let ta of tipoActividades" [value]=ta.nbId>{{ta.vrNombre}}</option>
                 </select>
                 <div [hidden]="tipoActividad.valid || tipoActividad.pristine" class="alert alert-danger">
@@ -24,14 +44,14 @@
         <div class="row">
             <div class="col-xs-2">Fecha</div>
             <div class="col-xs-4">
-                <input type="date" class="form-control" required [(ngModel)]="modelo.fechaActividad" ngControl="fechaActividad" #fechaActividad="ngForm">
+                <input type="date" class="form-control" required [(ngModel)]="modelo.dtFecha" ngControl="fechaActividad" #fechaActividad="ngForm">
                 <div [hidden]="fechaActividad.valid || fechaActividad.pristine" class="alert alert-danger">
                     La fecha de la actividad es requerida
                 </div>
             </div>
             <div class="col-xs-2">Horas</div>
             <div class="col-xs-4">
-                <input type="number" step="0.1" class="form-control" required [(ngModel)]="modelo.horas" ngControl="horas" #horas="ngForm">
+                <input type="number" step="0.1" class="form-control" required [(ngModel)]="modelo.nbHoras" ngControl="horas" #horas="ngForm">
                 <div [hidden]="horas.valid || horas.pristine" class="alert alert-danger">
                     La fecha de la actividad es requerida
                 </div>
@@ -40,7 +60,7 @@
         <div class="row">
             <div class="col-xs-2">Observaciones</div>
             <div class="col-xs-10">
-                <input type="text" multiple="multiple" class="form-control" [(ngModel)]="modelo.observacion" ngControl="observacion">
+                <input type="text" multiple="multiple" class="form-control" [(ngModel)]="modelo.vrDescripcion" ngControl="observacion">
             </div>
         </div>
         <button type="submit" class="btn btn-default" [disabled]="!actividadForm.form.valid">Guardar</button>
