--- a/ActividadesPresentacion/app/modulos/actividades/consulta-actividad.component.html
+++ b/ActividadesPresentacion/app/modulos/actividades/consulta-actividad.component.html
@@ -1,6 +1,6 @@
 <h2>Detalle Actividades</h2>
 <h4><span class="glyphicon glyphicon-backward" aria-hidden="true"></span>&nbsp; Semana del 13/03/2016 al 19/03/2016  &nbsp;<span class="glyphicon glyphicon-forward" aria-hidden="true"></span></h4>
-<div class="jumbotron">
+<div>
     <table class="table table-hover">
     <thead>
       <tr>
@@ -45,56 +45,6 @@
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> &nbsp;
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
         </td>
-      </tr>
-    </tbody>
-  </table>
-    
-</div>
-
-<div class="jumbotron">
-    <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>Tipo actividad/Día</th>
-        <th>Domingo</th>
-        <th>Lunes</th>
-        <th>Martes</th>
-        <th>Miercoles</th>
-        <th>Jueves</th>
-        <th>Viernes</th>
-        <th>Sábado</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th>Clase</th>
-        <td>0</td>
-        <td>3.5</td>
-        <td>8</td>
-        <td>0</td>
-        <td>0</td>
-        <td>0</td>
-        <td>0</td>
-      </tr>
-      <tr>
-        <th>Auditoria</th>
-        <td>0</td>
-        <td>0</td>
-        <td>0</td>
-        <td>7</td>
-        <td>0</td>
-        <td>0</td>
-        <td>0</td>
-      </tr>
-      <tr>
-        <th>Total</th>
-        <th>0</th>   
-        <th>3.5</th> 
-        <th>8</th>
-        <th>7</th>
-        <th>0</th>
-        <th>0</th>
-        <th>0</th>
       </tr>
     </tbody>
   </table>
