--- a/ActividadesPresentacion/app/modulos/actividades/registro-actividad.component.html
+++ b/ActividadesPresentacion/app/modulos/actividades/registro-actividad.component.html
@@ -1,5 +1,5 @@
 <h2>Registro actividad</h2>
-<div class="jumbotron">
+<div >
     <form #actividadForm="ngForm" (ngSubmit)="guardarRegistroActividad()">
         <div class="row">
             <div class="col-xs-2">Docente</div>
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-xs-2">Curso</div>
             <div class="col-xs-4">
-                <select class="form-control" required [(ngModel)]="modelo.tbDocenteSemestreCurso.nbId" ngControl="semestreCurso" #semestreCurso="ngForm">
+                <select class="form-control" required [(ngModel)]="modelo.idDocenteSemestreCurso" ngControl="semestreCurso" #semestreCurso="ngForm">
                     <option *ngFor="let sc of semestreCursos" [value]=sc.nbId>{{sc.tbSemestreCurso.tbGrupo.vrCodigo}} - {{sc.tbSemestreCurso.tbCurso.vrNombre}}</option>
                 </select>
                 <div [hidden]="semestreCurso.valid || semestreCurso.pristine" class="alert alert-danger">
@@ -33,7 +33,7 @@
             </div>
             <div class="col-xs-2">Tipo Actividad</div>
             <div class="col-xs-4">
-                <select class="form-control" required [(ngModel)]="modelo.tbTipoActividad.nbId" ngControl="tipoActividad" #tipoActividad="ngForm">
+                <select class="form-control" required [(ngModel)]="modelo.idTipoActividad" ngControl="tipoActividad" #tipoActividad="ngForm">
                     <option *ngFor="let ta of tipoActividades" [value]=ta.nbId>{{ta.vrNombre}}</option>
                 </select>
                 <div [hidden]="tipoActividad.valid || tipoActividad.pristine" class="alert alert-danger">
@@ -64,5 +64,7 @@
             </div>
         </div>
         <button type="submit" class="btn btn-default" [disabled]="!actividadForm.form.valid">Guardar</button>
+        <div *ngIf="mensajeError!=null" class="alert alert-danger" role="alert">{{mensajeError}}</div>
+        <div *ngIf="resultadoGuardado!=null" class="alert alert-success" role="alert">El reporte de actividad fue guardado satisfactoriamente</div>
     </form>
 </div>
