--- a/ActividadesPresentacion/app/modulos/actividades/consulta-actividad.component.html
+++ b/ActividadesPresentacion/app/modulos/actividades/consulta-actividad.component.html
@@ -13,34 +13,12 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>Sebastian Jimenes</td>
-        <td>Clase</td>
-        <td>14/03/2016</td>
-        <td>3.5</td>
-        <td>Actividad realizada con esmero</td>
-        <td>
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> &nbsp;
-            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-        </td>
-      </tr>
-      <tr>
-        <td>Sebastian Jimenes</td>
-        <td>Clase</td>
-        <td>15/03/2016</td>
-        <td>8</td>
-        <td>Clase realizada con esmero</td>
-        <td>
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> &nbsp;
-            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-        </td>
-      </tr>
-      <tr>
-        <td>Sebastian Jimenes</td>
-        <td>Auditoria</td>
-        <td>16/03/2016</td>
-        <td>7</td>
-        <td>Auditoria realizada con esmero</td>
+      <tr *ngFor="let a of actividades">
+        <td>{{a.tbDocenteSemestreCurso.tbDocente.tbPersona.vrNombres}} {{a.tbDocenteSemestreCurso.tbDocente.tbPersona.vrApellidos}}</td>
+        <td>{{a.tbTipoActividad.vrNombre}}</td>
+        <td>{{a.dtFecha}}</td>
+        <td>{{a.nbHoras}}</td>
+        <td>{{a.vrDescripcion}}</td>
         <td>
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> &nbsp;
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
