--- a/ActividadesPresentacion/app/modulos/actividades/consulta-actividad.component.html
+++ b/ActividadesPresentacion/app/modulos/actividades/consulta-actividad.component.html
@@ -1,7 +1,8 @@
 <h2>Detalle Actividades</h2>
-<h4><span class="glyphicon glyphicon-backward" aria-hidden="true"></span>&nbsp; Semana del 13/03/2016 al 19/03/2016  &nbsp;<span class="glyphicon glyphicon-forward" aria-hidden="true"></span></h4>
+<h4><a href="javascript:void(0)" (click)="consultar(semana.fechaInicial,-1)"><span class="glyphicon glyphicon-backward" aria-hidden="true"></span></a>&nbsp; Semana {{semana.numeroSemana}} - {{semana.fechaInicial | date}} a {{semana.fechaFinal | date}}  &nbsp;
+<a href="javascript:void(0)" (click)="consultar(semana.fechaFinal,1)"><span class="glyphicon glyphicon-forward" aria-hidden="true"></span></a></h4>
 <div>
-    <table class="table table-hover">
+  <table class="table table-hover">
     <thead>
       <tr>
         <th>Docente</th>
@@ -20,11 +21,12 @@
         <td>{{a.nbHoras}}</td>
         <td>{{a.vrDescripcion}}</td>
         <td>
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> &nbsp;
-            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+          <a href="javascript:void(0)" title="Modificar"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> &nbsp;
+          <a href="javascript:void(0)" title="Eliminar"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
         </td>
       </tr>
     </tbody>
   </table>
-    
+  <h4><a href="javascript:void(0)" (click)="consultar(semana.fechaInicial,-1)"><span class="glyphicon glyphicon-backward" aria-hidden="true"></span></a>&nbsp; Semana {{semana.numeroSemana}} - {{semana.fechaInicial | date}} a {{semana.fechaFinal | date}}  &nbsp;
+<a href="javascript:void(0)" (click)="consultar(semana.fechaFinal,1)"><span class="glyphicon glyphicon-forward" aria-hidden="true"></span></a></h4>
 </div>
