--- a/ActividadesPresentacion/app/modulos/actividades/consulta-actividad.component.html
+++ b/ActividadesPresentacion/app/modulos/actividades/consulta-actividad.component.html
@@ -1,6 +1,16 @@
 <h2>Detalle Actividades</h2>
-<h4><a href="javascript:void(0)" (click)="consultar(semana.fechaInicial,-1)"><span class="glyphicon glyphicon-backward" aria-hidden="true"></span></a>&nbsp; Semana {{semana.numeroSemana}} - {{semana.fechaInicial | date}} a {{semana.fechaFinal | date}}  &nbsp;
-<a href="javascript:void(0)" (click)="consultar(semana.fechaFinal,1)"><span class="glyphicon glyphicon-forward" aria-hidden="true"></span></a></h4>
+<div class="row">
+  <div class="col-xs-8">
+    <h5><a href="javascript:void(0)" (click)="consultar(semana.fechaInicial,-1)"><span class="glyphicon glyphicon-backward" aria-hidden="true"></span></a>&nbsp; Semana {{semana.numeroSemana}} - {{semana.fechaInicial | date}} a {{semana.fechaFinal | date}}  &nbsp;
+    <a href="javascript:void(0)" (click)="consultar(semana.fechaFinal,1)"><span class="glyphicon glyphicon-forward" aria-hidden="true"></span></a></h5>
+  </div>
+  <div class="col-xs-3">
+    <input #fechaActividad type="date" class="form-control"/>
+  </div>
+  <div class="col-xs-1" style="vertical-align:middle">
+    <a href="javascript:void(0)" (click)="consultarPorFecha(fechaActividad.value)"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a>
+   </div>
+</div>
 <div>
   <table class="table table-hover">
     <thead>
@@ -21,12 +31,12 @@
         <td>{{a.nbHoras}}</td>
         <td>{{a.vrDescripcion}}</td>
         <td>
-          <a href="javascript:void(0)" title="Modificar" (click)="editar(a.nbId)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> &nbsp;
+          <a href="javascript:void(0)" title="Modificar" (click)="editar(a.nbId)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>          &nbsp;
           <a href="javascript:void(0)" title="Eliminar" (click)="eliminar(a.nbId)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
         </td>
       </tr>
     </tbody>
   </table>
-  <h4><a href="javascript:void(0)" (click)="consultar(semana.fechaInicial,-1)"><span class="glyphicon glyphicon-backward" aria-hidden="true"></span></a>&nbsp; Semana {{semana.numeroSemana}} - {{semana.fechaInicial | date}} a {{semana.fechaFinal | date}}  &nbsp;
-<a href="javascript:void(0)" (click)="consultar(semana.fechaFinal,1)"><span class="glyphicon glyphicon-forward" aria-hidden="true"></span></a></h4>
+  <h5><a href="javascript:void(0)" (click)="consultar(semana.fechaInicial,-1)"><span class="glyphicon glyphicon-backward" aria-hidden="true"></span></a>&nbsp; Semana {{semana.numeroSemana}} - {{semana.fechaInicial | date}} a {{semana.fechaFinal | date}}  &nbsp;
+<a href="javascript:void(0)" (click)="consultar(semana.fechaFinal,1)"><span class="glyphicon glyphicon-forward" aria-hidden="true"></span></a></h5>
 </div>
